--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>我们是HTT工作室</h1>
 <p>具体查看Youtube的"沉迷IT无法自拔的C哥"还有Bilibili的"C哥做游戏"</p>
+<p>目前这里什么都没有，想了解我们可以去上面的视频网站账号</p>
 </body>
 </html>
