--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>我们是HTT工作室</h1>
 <p>具体查看Youtube的"沉迷IT无法自拔的C哥"还有Bilibili的"C哥做游戏"</p>
 <p>目前这里什么都没有，想了解我们可以去上面的视频网站账号</p>
+<p>这只是暂时的方案，最终我们一定会有一个.com域名的真正官网！</p>
 </body>
 </html>
